i18n框架, fixed首选项默认值问题

--- a/assets/i18n/bundle_zh_CN.properties
+++ b/assets/i18n/bundle_zh_CN.properties
@@ -1,3 +1,18 @@
 button.cancel = 取消
 button.save = 保存
+button.back = 返回
 button.exit = 退出
+button.ok = 确定
+
+menu.new = 新游戏
+menu.custom = 自定义游戏
+menu.load = 载入存档
+menu.pref = 选项
+menu.exit = 退出
+
+pref.cate.gameplay = 游戏
+pref.cate.render = 图形
+pref.cate.debug = 调试
+
+pref.drawUnitHitbox = 绘制单位碰撞箱
+pref.drawFlowField = 绘制流场寻路
