--- a/assets/i18n/bundle.properties
+++ b/assets/i18n/bundle.properties
@@ -16,3 +16,5 @@ pref.cate.debug = Debug
 
 pref.drawUnitHitbox = Draw Unit Hitbox
 pref.drawFlowField = Draw Flow Field
+pref.drawRange = Draw Range
+pref.drawTargetLine = Draw Target Line
