--- a/assets/i18n/bundle_zh_CN.properties
+++ b/assets/i18n/bundle_zh_CN.properties
@@ -16,3 +16,5 @@ pref.cate.debug = 调试
 
 pref.drawUnitHitbox = 绘制单位碰撞箱
 pref.drawFlowField = 绘制流场寻路
+pref.drawRange = 绘制范围
+pref.drawTargetLine = 绘制目标线
